# workspace-session-manager

./: .gitattributes  .gitignore  .gitleaks.toml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.md  SECURITY.md  config.example.toml  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  release.yml
docs/: architecture.md  current-system-assessment.md  migration.md  security.md  testing.md
docs/recordings/: README.md  create-validation.timing  create-validation.typescript  dashboard.timing  dashboard.typescript  diagnostics.timing  diagnostics.typescript  reduced-motion.timing  reduced-motion.typescript  usage-limit.timing  usage-limit.typescript
docs/screenshots/: README.md
scripts/: install-dev.sh  install.sh  migrate-ssh-hook.py  retire-classic.sh  secret-scan.sh  uninstall.sh
src/wf_session_manager/: __init__.py  classic.py  cli.py  config.py  errors.py  legacy.py  log_sink.py  migration.py  models.py  paths.py  security.py  service.py  store.py  tmux.py  tui.py  wf.tcss
src/workspace_session_manager/: __init__.py  cli.py  config.py  errors.py  health.py  legacy.py  log_sink.py  migration.py  models.py  notifier.py  paths.py  security.py  service.py  store.py  tmux.py  tui.py  wf.tcss
tests/: conftest.py  test_cli.py  test_config.py  test_cutover_scripts.py  test_health.py  test_legacy.py  test_log_sink.py  test_migration.py  test_models.py  test_notifier.py  test_service.py  test_store.py  test_tmux.py  test_tmux_integration.py  test_tui.py  test_tui_snapshots.py
